# finance-sim

./: .dockerignore  .gitmodules  alpha.json  docker-compose.yml  dockerfile  dune-project  finance_sim.opam  flake.nix  readme.md  results.json  run.bat  test.html
data/: ibm.json  sample.csv
data/test/: extra_column.csv  invalid_data.csv  invalid_date.csv  invalid_header.csv  large.csv
data/test_csv/: missing_column.csv  sample.csv
data/test_json/: invalid_data.json  invalid_date.json  missing_field.json  sample.json
lib/: dune  finace_sim.ml  finace_sim.mli
lib/model/: dune  model.ml
lib/parsing/: dune  parsing.ml  parsing.mli
lib/utils/: dune  utils.ml
lib/web/: dune  web.ml
plan/: 2025-02-01.md  2025-02-02.md  2025-02-03.md  2025-02-04.md  2025-02-06.md  2025-02-07.md  2025-02-08-9.md  2025-02-10.md  2025-02-11.md  2025-02-12-13.md  2025-02-18.md  2025-02-22-24.md  plan.md
test/: dune  test_finance_sim.ml
test/test_parsing/: dune  test_parsing.ml
web/: index.html  package.json
web/src/: App.svelte  app.css
